<resources>
    <string name="app_name">Pin Potha - Beta</string>
    <string name="app_version">App Version : 1.0</string>
    <string name="add">Add</string>
    <string name="home" translatable="false">Home</string>
    <string name="content_description_home" translatable="false">Home</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search</string>
    <string name="sidemenu" translatable="false">Side Menu</string>
    <string name="content_description_sidemenu" translatable="false">Side Menu</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="invite">Invite Friends</string>
    <string name="made_with" translatable="false">Made with </string>
    <string name="in" translatable="false">in</string>
    <string name="community">Community</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="notify">Notification</string>
    <string name="content_description_notify">Notification</string>
    <string name="share" translatable="false">Share</string>
    <string name="content_description_share" translatable="false">Share</string>
    <string name="translate">Change Language</string>
    <string name="btn_eng" translatable="false">English</string>
    <string name="btn_sin" translatable="false">සිංහල</string>
    <string name="btn_tam" translatable="false">தமிழ்</string>
    <string name="add_record">Add Meritorious Deeds</string>
    <string name="date">Date *</string>
    <string name="date2">Date :</string>
    <string name="description">Description</string>
    <string name="mainCat">Ten Meritorious Deeds</string>
    <string name="subCat">Sub Meritorious Deeds</string>
    <string name="edit_record">Edit Record</string>
    <string name="error_msg_mandatory">Please fill this field</string>
    <string name="error_msg_max_char">Maximum Character Limit Exceeded</string>
    <string name="oops">Ooops !</string>
    <string name="no_int">No Internet Connection Found. </string>
    <string name="chk_con">Check your Connection.</string>
    <string name="try_again">Try Again</string>
    <string name="launching_soon">We are Launching Soon!</string>
    <string name="working_on">We are Currently working on this Option.</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="good_morning">Good Morning ,</string>
    <string name="good_afternoon">Good Afternoon ,</string>
    <string name="good_evening">Good Evening ,</string>
    <string name="good_night">Good Night ,</string>
    <string name="msg_are_u_sure">Are You Sure ?</string>
    <string name="msg_confirm_delete">Do you really want to delete this record?</string>
    <string name="msg_confirm_delete_canot_be_undone">This process cannot be undone</string>
    <string name="start_date">Select Start Date to Search</string>
    <string name="end_date">Select End Date to Search</string>
    <string name="error_msg_invalid_date">Please select a date before End Date</string>
    <string name="label_no_data">No Data Found</string>
    <string name="search_result">Search Results</string>
    <string name="dana_help">Dāna or Charity (Alms Giving) is the act of giving for the betterment of others.
        When a person gives his or her possessions to the noble beings who are more virtuous including
        the Lord Buddha and the Sangha, such act is called as an “Offering”.
        Alms can also be classified as Alms of Material, Alms of Life, and Alms of Dhamma.</string>
    <string name="sila_help">Sīla or Moral Conduct is the refrainment from unwholesome acts and protection
        of precepts declared by the Lord Buddha.</string>
    <string name="meditation_help">Bhāvanā  or Meditation is the development of Concentration and Wisdom.
        The development of concentration is called as Concentration Meditation (Samatha Bhāvanā)
        and the development of wisdom is called as Insight Meditation (Vipassanā Bhāvanā).
        The meditation can also be defined as the development of “Thirty-Seven Requisites of Enlightenment”
        (Sattatiṁsā Bodhipakkhiyadhammā), namely the Four Foundations of Mindfulness
        (Cattāro Satipaṭṭhāna), the Four Right Strivings (Cattāro Sammappadhāna),
        the Four Bases of Spiritual Power (Cattāro Iddhipāda), the Five Faculties (Pañca Indriya),
        the Five Strengths (Pañca Bala), the Seven Factors of Enlightenment (Satta Bojjhaṅgā),
        and the Noble Eightfold Path (Ariyo Aṭṭhaṅgiko Maggo).
        Meditation is the highest merit amongst all the other merits</string>
    <string name="apachayana_help">Apacāyana is the act of paying reverence to people or objects
        who/which deserve to be respected. One can respect by body, by word, and by mind. </string>
    <string name="veyyavachcha_help">Veyyāvacca is the act of rendering service to people who are deserved.</string>
    <string name="prapthi_dana_help">Pattidāna is the act of sharing of merits gathered by a person to others.</string>
    <string name="paththanumodana_help">Pattāanumodana is the act of rejoicing in merits shared by others and
        rejoicing by listening to or seeing others’ meritorious deeds.</string>
    <string name="darmashrawana_help">Dhammassavana is the meritorious deed of listening
        to the noble dhamma preached by the Lord Buddha with utmost respect.</string>
    <string name="darmadeshana_help">Dhammadesanā is the meritorious deed of delivering dhamma
        or sponsoring dhamma sermons with the sole
        intention of relieving all beings from suffering without expecting a profit or fame. </string>
    <string name="dittigukamma_help">Dhiṭṭhijukamma is the development and purifying of Right
        View (Sammā Diṭṭhi). This involves the believing of Merits and Demerits,
        Actions and their Consequences (Kamma-Vipāka), Rebirth, etc. </string>
    <string name="dhamma_books">Dhamma Books</string>
    <string name="buddhist_events">Buddhist Events</string>
    <string name="dhamma_cermon">Dharma Sermons</string>
    <string name="contact">Contact Us</string>
    <string name="chat">Chat</string>
    <string name="mobile" translatable="false">+ 94 777178362</string>
    <string name="address">Address</string>
    <string name="address_detail">Prasanna,Meemana,Pokunuwita</string>
    <string name="email">E-mail</string>
    <string name="email_detail" translatable="false">thilangavinda@gmail.com</string>
    <string name="popular">Popular</string>
    <string name="desc_community">What is Community</string>
    <string name="ans_community">Community is a Forum where everyone
        after signing in can answer or ask,Buddhism related questions or doubts and
        other users can help with the problem.</string>
    <string name="desc_dhamma_books">What is Dhamma Books</string>
    <string name="ans_dhamma_books">In Dhamma Books option,
    links related to popular Dhamma Books can be found</string>
    <string name="desc_buddhist_events">What is Buddhist Events</string>
    <string name="ans_buddhist_events">Buddhist Events is a Calender
    which displays important Buddhist Events in the Year. User also can add events to the Calender</string>
    <string name="desc_darma_cermon">What is Dharma Sermons</string>
    <string name="ans_darma_cermon">In Dharma Sermon option,
    links related to popular Dharma Sermons can be found.
    </string>
    <string name="language">Language</string>
    <string name="anonymous">Anonymous</string>
    <string name="loading">Loading</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="welcome">Welcome</string>
    <string name="hello">Record your good Deeds</string>
    <string name="seamless">Seamlessly</string>
    <string name="na">-</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="dana">Dāna</string>
    <string name="sila">Sīla</string>
    <string name="apachayana">Apacāyana</string>
    <string name="veyyavachcha">Veyyāvacca</string>
    <string name="darmadeshana">Dhammadesanā</string>
    <string name="dittigukamma">Dhiṭṭhijukamma</string>
    <string name="meditation">Bhāvanā</string>
    <string name="darmashrawana">Dhammassavana</string>
    <string name="prapthi_dana">Pattidāna</string>
    <string name="paththanumodana">Pattāanumodana</string>
    <string name="other">Other</string>
    <string name="offer_budda">Offerings to the Lord Buddha</string>
    <string name="offer_sanga">Offerings to the Sangha</string>
    <string name="anugraha_dana">Alms to Laypeople</string>
    <string name="darma_dana">Alms of Dhamma</string>
    <string name="abhaya_dana">Alms of Life </string>
    <string name="pancha_sila">Observance of Five Precepts</string>
    <string name="brahmachari">Observance of Celibate Five Precepts</string>
    <string name="ashtanga_sila">Observance of Eight Precepts</string>
    <string name="nawanga_sila">Observance of Eight Precepts</string>
    <string name="dasa_sila">Observance of Ten Precepts</string>
    <string name="budda_vandana">Paying Reverence to the Lord Buddha</string>
    <string name="sangha_vandana">Paying Reverence to the Sangha</string>
    <string name="sacred_place_vandana">Paying Reverence to the Sacred Places</string>
    <string name="mapiya_vandana">Paying Reverence to the Parents</string>
    <string name="budda_upastana">Serving the Lord Buddha</string>
    <string name="sangha_upastana"> Serving the Sangha</string>
    <string name="sasana_upastana">Serving the Sasana</string>
    <string name="mapiya_upastana">Serving the Parents</string>
    <string name="gihi_upastana">Serving the Laypeople</string>
    <string name="shrama_dana">Serving the Lay Society</string>
    <string name="deshana_dayakathwa">Sponsoring of Dhamma Sermons</string>
    <string name="teaching_damma">Teaching Dhamma</string>
    <string name="damma_studies">Dhamma Studies</string>
    <string name="damma_sakachcha">Dhamma Discussions</string>
    <string name="damma_manasikara">Contemplation of Dhamma </string>
    <string name="para1">
        The custom of writing meritorious deeds on a book has been prevailing among
        Sri Lankans since ancient times. It is a well-known fact that King
        Dutugamunu,the Great who reunited Sri Lanka requested one of his
        subordinates to read out his "Book of Merits" (known as "Pin Potha" in Sinhala) at
        his last moment. The Merits Book comprises the virtuous and the greatest deeds
        which one has performed in his or her life. Using this book, a person can easily
        recall meritorious deeds regularly and develop more "Merits" (known as "Kusal"
        or "Pin" in Sinhala).
    </string>
    <string name="para2">
    This mobile application is the electronic version of the tradition of maintaining a
    Book of Merits.
     </string>
    <string name="para3">
   With Metta, we are gifting this app to you and hope that you will engage in more
meritorious deeds and recall them very easily pleasing yourselves. We hope that
you will use this app with great interest and step closer to the ultimate goal of
attaining &quot;Nibbana&quot;. We value your feedback and suggestions regarding this mobile application.
     </string>
    <string name="para4">
May the Triple Gem Bless you !
     </string>
    <string name="terms">Terms of Service</string>
    <string name="policy">Privacy policy</string>
    <string name="last_login">"Last Login : "</string>
</resources>