<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/img_no_int"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/no_int"
        app:srcCompat="@drawable/no_connection" />

    <TextView
        android:id="@+id/oops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/no_int"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_int"
        android:gravity="center"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/chk_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_con"
        android:gravity="center"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/try_again" />


</androidx.appcompat.widget.LinearLayoutCompat>