<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.side_bar.About">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar2"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_corner_rectangle"
        android:layout_gravity="top"
        app:title="About us" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="55dp"
        android:paddingBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/store_owner_pic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="pinpotha+icon"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircleImageV"
                app:srcCompat="@drawable/pinpotha_icon" />

            <TextView
                android:id="@+id/addrec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6" />



            <TextView
                android:id="@+id/para1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/para1" />

            <TextView
                android:id="@+id/para2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/para2" />

            <TextView
                android:id="@+id/para3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/para3" />

            <TextView
                android:id="@+id/para4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/para4" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/policy"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>



    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        app:menu="@menu/bottom_app_bar"
        app:fabAlignmentMode="end"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fActionbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_add_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>