<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".ui.bottom_bar.Translate">

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:text="@string/translate" />

            <RadioGroup
                android:id="@+id/langRadioGroup"
                android:layout_marginHorizontal="34dp"
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <RadioButton
                    android:id="@+id/lang_en"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="changeLanguage"
                    android:text="@string/btn_eng"/>
                <RadioButton
                    android:id="@+id/lang_si"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="changeLanguage"
                    android:text="@string/btn_sin"/>
                <RadioButton
                    android:id="@+id/lang_tm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="changeLanguage"
                    android:text="@string/btn_tam"/>
            </RadioGroup>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        app:menu="@menu/bottom_app_bar"
        app:fabAlignmentMode="end"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fActionbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_add_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>